fix: more flexible with padding-right, remove word-wrap;

--- a/src/components/reusable/notification/notification.scss
+++ b/src/components/reusable/notification/notification.scss
@@ -101,8 +101,7 @@ kd-card.notification-mark-read::part(card-wrapper) {
 }
 
 .notification-toast .notification-title {
-  max-width: 360px;
-  word-wrap: break-word;
+  padding-right: 20px;
 }
 
 .notification-toast .notification-state-icon {
